--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "case": "^1.6.3",
     "fs-jetpack": "^2.2.3",
     "graphql": "^14.6.0",
+    "lodash": "^4.17.15",
     "lodash.get": "^4.4.2",
     "ts-morph": "^7.0.1",
     "tslib": "^1.11.1"
